# wukong-III

./: CMakeLists.txt  dynamics.m  动力学参数估计.xlsx  逆运动学数值法流程图
doc/: .~编译问题.docx  编译问题.docx
include/: adaptive.h  adaptive3.h  kinematics.h
result/: wukong-III  模型参考自适应控制.drawio
rsc/wk3-fallstand/: Wukong3_rsm_fallstand.urdf
rsc/wk3-fallstand/meshes/: ARMOR.dae  FOOT_L.dae  FOOT_R.dae  LIDAR.dae  THIGH_R.dae
rsc/wk3-mpctest/: Bot1.gv  Wukong3_rsm.urdf
rsc/wk3-mpctest/meshes/: CHEST.dae  FOREARM_L.dae  ILIUM_R.dae  ISCHIUM_L.dae  SHANK_L.dae  UPPERARM_L.dae  UPPERARM_R.dae
rsc/wk3-mpcturn/: Wukong3_rsm.urdf
rsc/wk3-mpcturn/meshes/: ILIUM_L.dae  SACRUM.dae  SHANK_R.dae  SHOULDER_R.dae
rsc/wukong3/: Wukong3_meshFree.urdf  Wukong3_mpc.urdf  Wukong3_planar.urdf  Wukong3_planar_point.urdf  Wukong3_rack.urdf  Wukong3_rsm.urdf  Wukong3_rsm_origin.urdf
rsc/wukong3/meshes/: FOREARM_R.dae  ISCHIUM_R.dae  SCAPULA.dae  SHOULDER_L.dae  THIGH_L.dae
rsc/wukongIV/meshes/: FOREARM_L.STL  FOREARM_R.STL  HAND_L.STL  HAND_R.STL  SACRUM.STL  SCAPULA_L.STL  SCAPULA_R.STL  SHOULDER_L.STL  SHOULDER_R.STL  UPPERARM_L.STL  UPPERARM_R.STL
rsc/wukongIV/urdf/: WuKongIV_rsm.urdf
src/: adaptive.cpp  adaptive3.cpp  forward_kinematics.cpp  kinematics.cpp  kinematics_foot.cpp  kinematics_test.cpp  matplotlib.cpp  parameter_identify.cpp  raisimPy.py  root_tutorials.cpp  wukong copy.cpp  wukong.cpp  wukong2.cpp  wukong3.cpp  wukong3plot.cpp  wukong_VMC.cpp  wukong_test.cpp  wukong_up.cpp
